prevented jumping windows and added light stroke

--- a/src/retrowave/gtk-3.0/_common.scss
+++ b/src/retrowave/gtk-3.0/_common.scss
@@ -1490,7 +1490,7 @@ headerbar {
     border-color: $backdrop_borders_color;
     background-color: $bg_color;
     background-image: none;
-    box-shadow: inset 0 1px $top_hilight;
+    // box-shadow: inset 0 1px $top_hilight;
 
     transition: $backdrop_transition;
   }
@@ -1666,7 +1666,7 @@ headerbar {
 
   &.default-decoration {
     min-height: 28px;
-    padding: 4px 8px 4px 4px;
+    padding: 4px 10px 4px 4px;
 
     button.titlebutton,
     menubutton.titlebutton {
@@ -4300,28 +4300,31 @@ decoration {
   // lamefun trick to get rounded borders regardless of CSD use
   border-width: 0px;
 
+  // this is used for the resize cursor area
+  margin: 10px;
+
   // this needs to be transparent
   // see bug #722563
   $_wm_border: if($variant=='light', transparentize(black, 0.77), transparentize($borders_color, 0.1));
   $_wm_border_backdrop: if($variant=='light', transparentize(black, 0.82), transparentize($borders_color, 0.1));
+  
+  .csd & {
+    padding: 1px;
+    border: solid 1px $borders_color;
+    box-shadow: 0 0 12px 0 transparentize(black, 0.1),
+                inset 0 0 0 3px $headerbar_color,
+                inset 0 0 0 1px $top_hilight;
+    &:backdrop {
+      box-shadow: 0 0 12px 0 transparentize(black, 0.75),
+                  inset 0 0 0 3px $backdrop_bg_color,
+                  inset 0 0 0 1px $top_hilight;
+    }
+  }
 
-  box-shadow: 0 3px 9px 1px transparentize(black, 0.5),
-              0 0 0 1px $_wm_border; //doing borders with box-shadow
-
-  // FIXME rationalize shadows
-
-  // this is used for the resize cursor area
-  margin: 10px;
-
-  &:backdrop {
-    // the transparent shadow here is to enforce that the shadow extents don't
-    // change when we go to backdrop, to prevent jumping windows.
-    // The biggest shadow should be in the same order then in the active state
-    // or the jumping will happen during the transition.
-    box-shadow: 0 3px 9px 1px transparent,
-                0 2px 6px 2px transparentize(black, 0.8),
-                0 0 0 1px $_wm_border_backdrop;
-    transition: $backdrop_transition;
+  // server-side decorations as used by mutter
+  .ssd & {
+    box-shadow: 0 0 0 2px $_wm_border,
+                0 0 0 1px $top_hilight;
   }
 
   .maximized &,
@@ -4334,13 +4337,12 @@ decoration {
 
   .popup & { box-shadow: none; }
 
-  // server-side decorations as used by mutter
-  .ssd & { box-shadow: 0 0 0 1px $_wm_border; } //just doing borders, wm draws actual shadows
-
   .csd.popup & {
+    padding: 0;
+    border: none;
     border-radius: $menu_radius;
-    box-shadow: 0 1px 2px transparentize(black, 0.8),
-                0 0 0 1px transparentize($_wm_border, 0.1);
+    box-shadow: 0 1px 2px 1px transparentize(black, 0.8),
+                0 0 0 1px $_wm_border;
   }
 
   tooltip.csd & {
@@ -4686,11 +4688,6 @@ popover.menu {
 
 statusbar {
   padding: 6px 10px 6px 10px;
-}
-
-decoration {
-  border: 2px solid #4E3D69;
-  box-shadow: 0 0 0 2px black;
 }
 
 tooltip {
